# $Id$

2006-06-21	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/FileSystemDaoWorker.class.php,
	main/DAOs/SmartDaoWorker.class.php,
	main/DAOs/VoodooDaoWorker.class.php,
	core/Cache/WatermarkedPeer.class.php, core/DB/Sequenceless.class.php,
	core/DB/Dialect.class.php, core/DB/LiteDialect.class.php,
	core/Base/Stringable.class.php, core/Base/Instantiatable.class.php,
	core/Base/Session.class.php, core/OSQL/InsertOrUpdateQuery.class.php,
	core/OSQL/DBColumn.class.php, core/OSQL/DataType.class.php:
	synced with trunk.

2006-06-01	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Containers/ManyToManyLinkedFull.class.php: unlinking bugfix
	from trunk.

2006-05-27	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.14 released.

2006-05-22	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/FileSystemDaoWorker.class.php: arrived from trunk.

2006-05-20	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Utils/HeaderUtils.class.php,
	main/Utils/RussianTextUtils.class.php, main/Utils/Mail.class.php,
	main/Containers/UnifiedContainer.class.php,
	main/Containers/OneToManyLinked.class.php,
	main/Containers/ManyToManyLinked.class.php,
	core/Form/PlainForm.class.php,
	core/Form/PrimitiveEnumeration.class.php,
	core/Form/PrimitiveList.class.php, core/Base/Enumeration.class.php,
	core/Logic/LogicalBlock.class.php: synced with trunk.

	* branches/0.2/core/Form/ListedPrimitive.class.php: arrived from
	trunk.

2006-05-12	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Utils/RussianTextUtils.class.php,
	main/Base/CalendarMonthWeekly.class.php,
	core/Form/PrimitiveIdentifier.class.php, core/Form/Form.class.php:
	synced with trunk.

	* main/Utils/Mail.class.php: arrived from trunk.


2006-05-02	Sergey S. Sergeev   <webs.support@gmail.com>

	* main/Containers/StorableContainer.class.php: synced with trunk.

2006-05-02	Sergey S. Sergeev	<webs.support@gmail.com>

	* core/Form/Filter.class.php, core/Form/Primitive.class.php,